Decreased the margin-top of .level to fix almost overlapping paragraph in the SQL section

--- a/src/styles/aboutMe.css
+++ b/src/styles/aboutMe.css
@@ -210,7 +210,7 @@ ol {
 
     .level {
         font-weight: 300;
-        margin: -20px 0 20px;
+        margin: -15px 0 20px;
     }
 
     .languages-list > li img {
